@@ -22,3 +22,4 @@ texinfo.tex
 version.texi
 programmer_types.texi
 parts.texi
+programmers.texi
